CHATS_SIT/force-app/main/default/objects/Account.object
<CustomObject>
    <fields>
        <fullName>County_Lookup__c</fullName>
        <label>County Lookup</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adams</fullName>
                </value>
                <value>
                    <fullName>Alamosa</fullName>
                </value>
                <value>
                    <fullName>Arapahoe</fullName>
                </value>
                <value>
                    <fullName>Archuleta</fullName>
                </value>
                <value>
                    <fullName>Baca</fullName>
                </value>
                <value>
                    <fullName>Bent</fullName>
                </value>
                <value>
                    <fullName>Boulder</fullName>
                </value>
                <value>
                    <fullName>Broomfield</fullName>
                </value>
                <value>
                    <fullName>Chaffee</fullName>
                </value>
                <value>
                    <fullName>Cheyenne</fullName>
                </value>
                <value>
                    <fullName>Clear Creek</fullName>
                </value>
                <value>
                    <fullName>Conejos</fullName>
                </value>
                <value>
                    <fullName>Costilla</fullName>
                </value>
                <value>
                    <fullName>Crowley</fullName>
                </value>
                <value>
                    <fullName>Custer</fullName>
                </value>
                <value>
                    <fullName>Delta</fullName>
                </value>
                <value>
                    <fullName>Denver</fullName>
                </value>
                <value>
                    <fullName>Dolores</fullName>
                </value>
                <value>
                    <fullName>Douglas</fullName>
                </value>
                <value>
                    <fullName>Eagle</fullName>
                </value>
                <value>
                    <fullName>Elbert</fullName>
                </value>
                <value>
                    <fullName>El Paso</fullName>
                </value>
                <value>
                    <fullName>Fremont</fullName>
                </value>
                <value>
                    <fullName>Garfield</fullName>
                </value>
                <value>
                    <fullName>Gilpin</fullName>
                </value>
                <value>
                    <fullName>Grand</fullName>
                </value>
                <value>
                    <fullName>Gunnison</fullName>
                </value>
                <value>
                    <fullName>Hinsdale</fullName>
                </value>
                <value>
                    <fullName>Huerfano</fullName>
                </value>
                <value>
                    <fullName>Jackson</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Director_Authorized_Email__c</fullName>
        <label>Director / Authorized Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Director_Authorized_Phone__c</fullName>
        <label>Director / Authorized Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Director_of_Program__c</fullName>
        <label>Director_of_Program</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FEIN__c</fullName>
        <label>FEIN</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Final_Award_Date__c</fullName>
        <description>Final Award Date - data transferred from OEC org ( Provider)</description>
        <label>Final Award Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Contact_Date__c</fullName>
        <inlineHelpText>Provider Last Contact Date from OEC</inlineHelpText>
        <label>Last Contact Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>License_Certification_Date__c</fullName>
        <label>License Certification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>License_Certification_Type__c</fullName>
        <label>License/Certification Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Permanent</fullName>
                </value>
                <value>
                    <fullName>Probationary</fullName>
                </value>
                <value>
                    <fullName>Provisional</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>License_Effective_Date__c</fullName>
        <description>License Effective Date - data transferred from OEC Org ( Provider)</description>
        <label>License Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>License_Expiration_Date__c</fullName>
        <label>License Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>License_Number__c</fullName>
        <label>License Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Licensing_Status__c</fullName>
        <label>Licensing Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Reported_Phone_Number__c</fullName>
        <label>Other Reported Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone_Program_Site_Phone__c</fullName>
        <label>Phone (Program Site Phone)`</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Primary_Email__c</fullName>
        <description>Primary Email - Data transferred from OEC Org ( Provider)</description>
        <label>Primary Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Program_Name__c</fullName>
        <label>Program Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
        <fields>
        <fullName>Sunday_End_Time__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sunday End Time</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sunday_Start_Time__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sunday Start Time</label>
        <length>10</length>
        <type>Text</type>
    </fields>
      <fields>
        <fullName>Monday_End_Time__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Monday End Time</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monday_Start_Time__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Monday Start Time</label>
        <length>10</length>
        <type>Text</type>
    </fields>
        <fields>
        <fullName>Tuesday_End_Time__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Tuesday End Time</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tuesday_Start_Time__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Tuesday Start Time</label>
        <length>10</length>
        <type>Text</type>
    </fields>
        <fields>
        <fullName>Wednesday_End_Time__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Wednesday End Time</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wednesday_Start_Time__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Wednesday Start Time</label>
        <length>10</length>
        <type>Text</type>
    </fields>
        <fields>
        <fullName>Thursday_End_Time__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Thursday End Time</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Thursday_Start_Time__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Thursday Start Time</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Friday_End_Time__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Friday End Time</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Friday_Start_Time__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Friday Start Time</label>
        <length>10</length>
        <type>Text</type>
    </fields>
        <fields>
        <fullName>Saturday_End_Time__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Saturday End Time</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Saturday_Start_Time__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Saturday Start Time</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Slot_Contract_Suggestion__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Slot Contract Suggestion</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QRIS_Rating__c</fullName>
        <label>QRIS Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Level 1</fullName>
                </value>
                <value>
                    <fullName>Level 2</fullName>
                </value>
                <value>
                    <fullName>Level 3</fullName>
                </value>
                <value>
                    <fullName>Level 4</fullName>
                </value>
                <value>
                    <fullName>Level 5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SAP_Account__c</fullName>
        <externalId>true</externalId>
        <label>SAP Account #</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SSN_FEIN__c</fullName>
        <label>SSN/FEIN</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Type__c</fullName>
        <label>Service Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DCH3</fullName>
                </value>
                <value>
                    <fullName>DCH</fullName>
                </value>
                <value>
                    <fullName>DCC</fullName>
                </value>
                <value>
                    <fullName>ECCP</fullName>
                </value>
                <value>
                    <fullName>ITH</fullName>
                </value>
                <value>
                    <fullName>LDCH</fullName>
                </value>
                <value>
                    <fullName>NYO</fullName>
                </value>
                <value>
                    <fullName>PRS</fullName>
                </value>
                <value>
                    <fullName>RSCMP</fullName>
                </value>
                <value>
                    <fullName>SACC</fullName>
                </value>
                <value>
                    <fullName>DT</fullName>
                </value>
                <value>
                    <fullName>DEFAB</fullName>
                </value>
                <value>
                    <fullName>DEFAH</fullName>
                </value>
                <value>
                    <fullName>IFACB</fullName>
                </value>
                <value>
                    <fullName>IFACH</fullName>
                </value>
                <value>
                    <fullName>FFHC</fullName>
                </value>
                <value>
                    <fullName>ADOPT</fullName>
                </value>
                <value>
                    <fullName>TFO</fullName>
                </value>
                <value>
                    <fullName>Facility</fullName>
                </value>
                <value>
                    <fullName>Individual</fullName>
                </value>
                <value>
                    <fullName>Specialized Group Home</fullName>
                </value>
                <value>
                    <fullName>FCCH</fullName>
                </value>
                <value>
                    <fullName>CCC</fullName>
                </value>
                <value>
                    <fullName>LFCH</fullName>
                </value>
                <value>
                    <fullName>FCCH3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_UPK_Provider__c</fullName>
        <defaultValue>false</defaultValue>
        <label>UPK Provider</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>Program_Name__c</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>License_Number__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>